--- a/styles/small.css
+++ b/styles/small.css
@@ -6,6 +6,6 @@
 
     h1 {
         
-        font-size: medium;
+        font-size: large;
     }
 }
